fix: resize image to remove the stretching of the image

--- a/index.css
+++ b/index.css
@@ -3254,10 +3254,36 @@ body {
     background-image: url('https://images.unsplash.com/photo-1598335624134-5bceb5de202d?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    
+    background-position: center;    
 }
 
+
+.main-section > div.img-container.service-details img {
+    height: auto;
+    width: auto;
+}
+
+
+.working .tiles-wrapper.service-details .tile {
+    height: 248px;
+}
+
+
+.working .tiles-wrapper.service-details .tile .overlay {
+    top: 36px;
+}
+
+
+.outline .sidebar .services {
+    padding: 40px 30px;
+}
+
+
+.outline .sidebar .services h1 {
+    font-size: 33px;
+    font-weight: 700;
+    color: var(--black);
+}
 
 
 
